Made tweaks to dark mode basemap and fixed touch issue

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -104,6 +104,10 @@ body {
   pointer-events: none !important;
 }
 
+.esri-view .esri-view-surface--touch-none {
+   touch-action: none;
+}
+
 .ui-top-left {
   top: 0;
 }
@@ -169,14 +173,14 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(20,20,20,.35);
   border-radius: 8px;
 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(20,20,20,.5);
 }
 
 .card__title {
@@ -217,7 +221,7 @@ body {
   margin-bottom:$seperator-gap;
   width: 20rem;
   height: 1px;
-  background-color: rgba(117, 117, 117, 0.2);
+  background-color: rgba(0,0,0,0.35);
 }
 
 
@@ -546,7 +550,7 @@ $taxa-row-gap: 1.5rem;
   margin-right: 2rem;
   position:relative;
   box-shadow:0px 0px 3px 2px rgba(24, 24, 24, .07);
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255,255,255,0.35);
 }
 
 .underwater__svg {
@@ -653,7 +657,8 @@ img {
   width:100%;
   height:7px;
   border-radius:20px;
-  background-color: grey;
+  background-color: rgba(200,200,200,0.3);
+  backdrop-filter: blur(10px);
   transition: width 1s ease-out;
 }
 
@@ -697,6 +702,7 @@ img {
   width: 100%;
   bottom: -180%;
   font-size: 1.2rem; 
+  color: $font-color;
 }
 
 .cretaceous__age {
